# appmana-comfyui-nodes-impact-pack

./: README.md  __init__.py  pyproject.toml  requirements.txt
modules/impact/: animatediff_nodes.py  bridge_nodes.py  config.py  core.py  detectors.py  hf_nodes.py  hooks.py  impact_pack.py  impact_sampling.py  impact_server.py  legacy_nodes.py  logics.py  mmdet_nodes.py  onnx.py  pipe.py  sample_error_enhancer.py  segs_nodes.py  segs_upscaler.py  special_samplers.py  subcore.py  subpack_nodes.py  util_nodes.py  utils.py  wildcards.py
modules/impact/nodes/: __init__.py
modules/impact_config/: add_configuration.py
