[project]
name = "comfyui-impact-pack"
description = "This extension offers various detector nodes and detailer nodes that allow you to configure a workflow that automatically enhances facial details. And provide iterative upscaler."
version = "5.15"
license = { file = "LICENSE.txt" }
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/ltdrdata/ComfyUI-Impact-Pack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drltdata"
DisplayName = "ComfyUI Impact Pack"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_impact_pack"]
package-dir = { "comfyui_impact_pack" = "." }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.entry-points."comfyui.custom_nodes"]
comfyui_impact_pack = "comfyui_impact_pack.modules.impact.nodes"
comfyui_impact_pack_web_directory = "comfyui_impact_pack"

[project.entry-points."comfyui.custom_config"]
comfyui_impact_pack = "comfyui_impact_pack.modules.impact_config.add_configuration:add_configuration"