[project]
name = "comfyui-impact-pack"
description = "This extension offers various detector nodes and detailer nodes that allow you to configure a workflow that automatically enhances facial details. And provide iterative upscaler."
version = "7.10"
license = { file = "LICENSE.txt" }
dependencies = [
  "comfyui",
  "segment-anything",
  "scikit-image",
  "piexif",
  "transformers",
  "opencv-python-headless",
  "GitPython",
  "scipy>=1.11.4",
  "dill",
  "matplotlib",
  "opendatalab>=0.0.9",
  "onnxruntime",
  "onnxruntime-gpu; platform_system != 'Darwin'",
  "nvidia-cudnn-cu12; platform_system != 'Darwin'",
  "ultralytics",
]

[project.urls]
Repository = "https://github.com/ltdrdata/ComfyUI-Impact-Pack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drltdata"
DisplayName = "ComfyUI Impact Pack"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_impact_pack"]
package-dir = { "comfyui_impact_pack" = "." }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.entry-points."comfyui.custom_nodes"]
comfyui_impact_pack = "comfyui_impact_pack.modules.impact.nodes"
comfyui_impact_pack_web_directory = "comfyui_impact_pack"

[project.entry-points."comfyui.custom_config"]
comfyui_impact_pack = "comfyui_impact_pack.modules.impact_config.add_configuration:add_configuration"